Add feature to make the mines evasive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <title>Minesweeper</title>
   <link rel="stylesheet" href="style.css">
   <script src="app.js" charset="utf-8"></script>
+  <script src="libs/deque.js" charset="utf-8"></script>
+  <script src="libs/assignment.js" charset="utf-8"></script>
+  <script src="libs/sat.js" charset="utf-8"></script>
+  <script src="libs/helpers.js" charset="utf-8"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
