Add hidden feature to display the mined cells

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <body>
 
   <div class="container">
+    <input id="bombs-toggle" type="checkbox">
     <div class="grid"></div>
-    <div>Flags left: <span id='flags-left'></span></div>
+    <div>Flags l<label for="bombs-toggle" id="toggle-btn">e</label>ft: <span id='flags-left'></span></div>
     <div id="result"></div>
   </div>
 
